@@ -1,3 +1,11 @@
+Wed Aug 20 16:14:06 GMT 2008  Richard Boulton <richard@lemurconsulting.com>
+
+	* xappy/searchconnection.py: Ensure that _next_docid is initialised
+	  so that searches on empty databases with no configuration don't
+	  fail.
+	* xappy/unittests/emptydb_search.py: Add regression test for this
+	  problem.
+
 Wed Aug 20 12:31:38 GMT 2008  Richard Boulton <richard@lemurconsulting.com>
 
 	* build.py,setup.py,test.py,xappy/,xappy/unittests/: Remove
